[tool.poetry]
name = "pelican-themes-page"
version = "0.1.0"
description = "A Static website generated using Pelican to display all Pelican Themes available at https://github.com/getpelican/pelican-themes"
authors = ["Luigi <luigibertaco@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pelican = "^4.5.0"
gql = "^2.0.0"
dynaconf = "^3.1.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
